force-app/main/default/objects/Activity/fields/Dependent_Tasks_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Tasks_To_Complete__c</fullName>
    <description>Number of tasks excepted to be completed before this task can be started.</description>
    <label>Dependent Tasks To Complete</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>