force-app/main/default/objects/Activity/fields/Is_Simply_Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Simply_Tasks_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tells if Simply Tasks created this task.</inlineHelpText>
    <label>Is Simply Tasks Created</label>
    <type>Checkbox</type>
</CustomField>