force-app/main/default/objects/Activity/fields/Is_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Task_Completed__c</fullName>
    <formula>AND (
    Is_Simply_Tasks_Created__c,
    IF (
        IsTask,
        IsClosed,
        ActivityDate &lt; TODAY()
    )
)</formula>
    <label>Is Task Completed</label>
    <type>Checkbox</type>
</CustomField>