force-app/main/default/objects/Activity/fields/Task_Template_Step__c.field-meta.xml
<CustomField>
    <fullName>Task_Template_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Template Step</label>
    <referenceTo>Task_Template_Step__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>