force-app/main/default/objects/Activity/listViews/UpcomingEvents.listView-meta.xml
<ListView>
    <fullName>UpcomingEvents</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>